--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.3",
     "axios": "^1.12.2",
+    "i": "^0.3.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
